--- a/index.html
+++ b/index.html
@@ -12,10 +12,44 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
-    </main>
-
-    <footer>
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li>The head element contains information about the webpage.</li>
+          <li>The body element represents the visible content shown to the user.</li>
+          <li>The style element defines the CSS styles associated with a website.</li>
+          <li>The base element defines the base URL for a webpage.</li>
+          <li>The link element connects an external resource to the HTML document.</li>
+          <li>the meta element defines metadata such as the character set, description, keywords, author and viewport.</li>
+          <li>The script element embeds client-side scripts in the HTML document.</li>
+        </ul>
+            </section>
+        <section class="card" id="css-section">
+          <h2>CSS</h2>
+          <ul>
+            <li>Enter your CSS notes here</li>
+          </ul>
+        </section>
+        <section class="card" id="git-section">
+          <h2>Git</h2>
+          <ul>
+            <li>git must proceed all commands</li>
+            <li>git status: checks what branche we are currently on</li>
+            <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+            <li>git commit -A: prepares the branch for incoming changes</li>
+            <li>git commit -m comnmit-message: records changes in the version history of the repository</li>
+            <li>git pull origin branch-name: fetches and merges changes on the remote server to your working directory</li>
+            <li>git push origin branch-name: pushes changes to your remote repository</li>
+          </ul>
+        </section>
+        <section class="card" id="javascript-section">
+          <h2>JavaScript</h2>
+          <ul>
+            <li>Enter your JavaScript notes here</li>
+          </ul>
+        </section>
+            </main>
+            <footer>
       <p>I can code!</p>
     </footer>
   </body>
