added CSS to project

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -27,7 +28,22 @@
         <section class="card" id="css-section">
           <h2>CSS</h2>
           <ul>
-            <li>Enter your CSS notes here</li>
+            <li>When a developer wants to style an element directly in the HTML file, they use inline CSS.</li>
+            <li>Inline style sheets apply to a specific HTML tag, using a style attribute with a CSS rule to styke a particular page element only. 
+                They are useful for quick and permanent changes, but are less flexible.</li>
+            <li>Internal style sheets embed an entire style sheet directly in an HTML file using a style and head element.</li>
+            <li>External style sheets keep all CSS rules in a seperate file, which make design changes easier.</li>
+            <li>A selector defines the element or attributes to which the rules or, or declarations will apply.</li>
+            <li>Declarations contain the CSS property we want to apply and the value of the property.</li>
+            <li>A margin property indicates how much space we want around the outside of an element.</li>
+            <li>A padding property adds space around the content inside an element.</li>
+            <li>CSS Box Model is as follows:
+              1. Margin
+              2. Border
+              3. Padding
+              4. Content
+                       </li>
+            <li>To apply a rule to all the elements visible on the page we use a special wild card symbol, or *.</li>
           </ul>
         </section>
         <section class="card" id="git-section">
